--- a/src/app/components/folderside/component.folderside.html
+++ b/src/app/components/folderside/component.folderside.html
@@ -1,5 +1,5 @@
 <div ngClass="folderSide" [ngStyle]="{'width':width}">
-    <div id="diskTree" ngClass="directory tj_container">
+    <div ngClass="directory tj_container">
         <ul>
             <li><span ngClass="tj_description"><span ngClass="tj_mod_icon"><span>◢</span></span><span
                         ngClass="tj_icon"><img src="/assets/images/hdd.png" width="15px/"></span>Diskler</span>
@@ -16,7 +16,7 @@
             </li>
         </ul>
     </div>
-    <div id="privateFieldTree" ngClass="directory tj_container">
+    <div ngClass="directory tj_container">
         <ul>
             <li>
                 <span ngClass="tj_description">
