--- a/src/app/components/dialog/component.dialogpasswordinput.html
+++ b/src/app/components/dialog/component.dialogpasswordinput.html
@@ -1,30 +1,30 @@
-<div class="dialog" name="passwordConfirmDialog" *ngIf="visible"
-    [ngStyle]="{'margin-left':marginLeft,'margin-top':marginTop}" (mouseup)="mouseUp($event)">
-    <div class="dialogTop" (mouseup)="mouseUp($event)">
-        <div class="dialogTitle" (mousedown)="mouseDown($event);" (mousemove)="mouseMove($event)"
+<div ngClass="dialog" *ngIf="visible" [ngStyle]="{'margin-left':marginLeft,'margin-top':marginTop}"
+    (mouseup)="mouseUp($event)">
+    <div ngClass="dialogTop" (mouseup)="mouseUp($event)">
+        <div ngClass="dialogTitle" (mousedown)="mouseDown($event);" (mousemove)="mouseMove($event)"
             (mouseup)="mouseUp($event)">
-            <span name="dialogTitle">{{title}}</span>
+            <span>{{title}}</span>
         </div>
-        <div class="dialogClose" (click)="hide();">
+        <div ngClass="dialogClose" (click)="hide();">
             <img src="/assets/images/close.png">
         </div>
     </div>
-    <div class="dialogFrame">
-        <div class="dialogIcon">
+    <div ngClass="dialogFrame">
+        <div ngClass="dialogIcon">
             <img src="/assets/images/warning.ico">
         </div>
-        <div class="dialogContent">
+        <div ngClass="dialogContent">
             <div>
-                <p class="dialogText">{{message}}</p>
+                <p ngClass="dialogText">{{message}}</p>
             </div>
-            <div class="dialogInputGroup" name="dialogPasswordGroup">
-                <div class="dialogInput">
+            <div ngClass="dialogInputGroup">
+                <div ngClass="dialogInput">
                     <input type="password" [(ngModel)]="password" placeholder="{{placeholder}}">
                 </div>
             </div>
-            <div class="dialogControls" name="controls">
-                <div class="dialogSingleControl">
-                    <button name="dialogOk" (click)="Ok();">Tamam</button>
+            <div ngClass="dialogControls">
+                <div ngClass="dialogSingleControl">
+                    <button (click)="Ok();">Tamam</button>
                 </div>
             </div>
         </div>
