--- a/src/app/components/folderpath/component.folderpath.html
+++ b/src/app/components/folderpath/component.folderpath.html
@@ -1,19 +1,17 @@
 <div ngClass="folderPath">
     <div ngClass="folderLine bottomBorder">
-        <div name="folders">
-            <div ngClass="folderItem" name="pathTitle" currentlocation="2" locationid="40" diskid="40">
+        <div>
+            <div ngClass="folderItem">
                 <span>Konum</span>
             </div>
             <div ngClass="folderItem" *ngFor="let item of paths" (click)="openPath(item)">
                 <img src="{{item.logo}}" /><span> {{item.name}}</span>
             </div>
             <div ngClass="searchBar">
-                <img id="searchButton" src="/assets/images/search.png">
-                <img id="notify" src="/assets/images/bell.png">
-
+                <img src="/assets/images/search.png">
+                <img src="/assets/images/bell.png">
             </div>
-            <div name="notifications" ngClass="notifications"></div>
+            <div ngClass="notifications"></div>
         </div>
     </div>
-
 </div>
