--- a/src/app/components/grid/component.grid.html
+++ b/src/app/components/grid/component.grid.html
@@ -49,7 +49,8 @@
         <div ngClass="gridLine splitterBottom" *ngFor="let item of content.folders"
             (contextmenu)="showContextMenu($event,item.type,item.id,false);" (dblclick)="openFolder(item.id)">
             <div ngClass="checkboxField">
-                <input type="checkbox" (change)="setChecked(item)" [checked]="item.checked"></div>
+                <input type="checkbox" (change)="setChecked(item)" [checked]="item.checked">
+            </div>
             <div ngClass="gridLogo">
                 <img src="{{item.logo}}">
             </div>
@@ -84,7 +85,8 @@
         <div ngClass="gridLine splitterBottom" *ngFor="let item of content.files"
             (contextmenu)="showContextMenu($event,item.type,item.id,false);">
             <div ngClass="checkboxField">
-                <input type="checkbox" [checked]="item.checked" /></div>
+                <input type="checkbox" (change)="setChecked(item)" [checked]="item.checked" />
+            </div>
             <div ngClass="gridLogo">
                 <img src="{{item.logo}}">
             </div>
